# entelix

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.ko.md  README.md  deny.toml  mise.toml  release-plz.toml  rust-toolchain.toml
crates/entelix/: CLAUDE.md  Cargo.toml
crates/entelix-agents/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-agents/src/: chat_agent.rs  compaction.rs  hierarchical.rs  lib.rs  react_agent.rs  state.rs  subagent.rs  summarizer.rs  supervisor.rs
crates/entelix-agents/tests/: agent_audit_usage_limit.rs  agent_otel_span.rs  agent_run_budget_span.rs  agent_stream.rs  agent_streaming_e2e.rs  approval_effect_gate.rs  audit_sink_emits.rs  lifecycle_events.rs  react_recipe_defaults.rs  recipes.rs  skill_auto_wire.rs  skill_subagent_filter.rs  skill_subagent_restriction.rs  subagent_capture_pattern.rs  subagent_layer_inheritance.rs  tool_progress_wiring.rs
crates/entelix-auth-claude-code/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-auth-claude-code/examples/: oauth_credential_flow.rs
crates/entelix-auth-claude-code/src/: config.rs  credential.rs  error.rs  lib.rs  provider.rs  refresh.rs  store.rs
crates/entelix-auth-claude-code/tests/: live_oauth_extended_thinking.rs  live_oauth_round_trip.rs
crates/entelix-cloud/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-cloud/src/: error.rs  lib.rs  refresh.rs
crates/entelix-cloud/tests/: bedrock_transport.rs  compat_matrix.rs  event_stream.rs  foundry_transport.rs  live_bedrock.rs  live_vertex_anthropic.rs  live_vertex_gemini.rs  live_vertex_gemini_multimodal.rs  live_vertex_gemini_streaming.rs  live_vertex_gemini_system_multi_turn.rs  live_vertex_gemini_tool_calling.rs  live_vertex_gemini_tool_round_trip.rs  live_vertex_gemini_typed_output.rs  refresh.rs  vertex_transport.rs
crates/entelix-core/: CLAUDE.md  Cargo.toml
crates/entelix-core/src/: agent_context.rs  approval.rs  audit.rs  auth.rs  backoff.rs  cancellation.rs  chat.rs  context.rs  cost.rs  error.rs  events.rs  extensions.rs  identity.rs  interruption.rs  lib.rs  llm_facing.rs  output_validator.rs  overrides.rs  rate_limit.rs  run_budget.rs  sandbox.rs  service.rs  stream.rs  tenant_id.rs  thread_key.rs  time.rs  tls.rs  tokens.rs
crates/entelix-core/tests/: anthropic_codec.rs  anthropic_streaming.rs  auth_basics.rs  backoff.rs  bedrock_converse_codec.rs  cache_and_response_format.rs  cache_control_expansion.rs  chat_model.rs  codec_consistency_matrix.rs  codec_robustness_proptest.rs  codec_streaming_fallback.rs  codec_transport_basics.rs  complete_typed_retry.rs  direct_transport.rs  direct_transport_streaming.rs  error_wire_code.rs  events.rs  gemini_codec.rs  ir_roundtrip.rs  live_anthropic.rs  live_gemini.rs  live_openai_chat.rs  live_openai_responses.rs  lossy_warning_completeness.rs  multi_turn_continue.rs  openai_chat_codec.rs  openai_responses_chain_dedup.rs  openai_responses_codec.rs  provider_echo_round_trip.rs  rate_limit.rs  retry_layer.rs  retry_tool_layer.rs  skill_registry.rs  stream_aggregator.rs  stream_typed.rs  streaming_thinking.rs  structured_output_strict_preflight.rs  tenant_id.rs  tool_basics.rs  tool_registry_d_free_layers.rs
crates/entelix-graph/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-graph-derive/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-graph-derive/src/: lib.rs
crates/entelix-graph-derive/tests/: derive_state_merge.rs
crates/entelix-graph/src/: checkpoint.rs  command.rs  compiled.rs  contributing_node.rs  dispatch.rs  finalizing_stream.rs  in_memory_checkpointer.rs  interrupt.rs  lib.rs  merge_node.rs  reducer.rs  state_graph.rs
crates/entelix-graph/tests/: basic.rs  checkpoint.rs  conditional.rs  contributing_node.rs  interrupt.rs  merge_node.rs  reducer_proptest.rs  resume_audit_emit.rs  send_edges.rs  streaming.rs  time_travel.rs
crates/entelix-graphmemory-pg/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-graphmemory-pg/src/: error.rs  lib.rs  migration.rs  store.rs  tenant.rs
crates/entelix-graphmemory-pg/tests/: postgres_e2e.rs  postgres_rls.rs
crates/entelix-mcp/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-mcp-chatmodel/: CLAUDE.md  Cargo.toml
crates/entelix-mcp-chatmodel/src/: lib.rs  provider.rs
crates/entelix-mcp-chatmodel/tests/: sample_through_chat_model.rs
crates/entelix-mcp/src/: chatmodel.rs  client.rs  completion.rs  elicitation.rs  error.rs  fsm.rs  lib.rs  manager.rs  prompt.rs  protocol.rs  resource.rs  roots.rs  sampling.rs  server_config.rs  sse.rs  tool_adapter.rs  tool_definition.rs
crates/entelix-mcp/tests/: hostile_server_caps.rs  http_e2e.rs  llm_renderable.rs  sample_through_chat_model.rs  streamable_elicitation_e2e.rs  streamable_roots_e2e.rs  streamable_sampling_e2e.rs
crates/entelix-memory/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-memory-openai/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-memory-openai/src/: embedder.rs  error.rs  lib.rs
crates/entelix-memory-openai/tests/: live_openai_embedder.rs  openai_e2e.rs
crates/entelix-memory-pgvector/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-memory-pgvector/src/: error.rs  filter.rs  lib.rs  migration.rs  store.rs  tenant.rs
crates/entelix-memory-qdrant/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-otel/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-persistence/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-policy/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-prompt/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-rag/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-runnable/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-server/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-session/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-tokenizer-hf/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-tokenizer-tiktoken/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-tool-derive/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-tools/: CLAUDE.md  Cargo.toml  README.md
crates/entelix-tools-coding/: CLAUDE.md  Cargo.toml
xtask/: Cargo.toml
xtask/src/: gates.rs  main.rs  visitor.rs
(+449 files in other folders)
