# entelix — workspace manifest
#
# Rust 1.95, Edition 2024, resolver v3.
# Lockstep workspace — every member crate carries the same version on
# crates.io. All dependencies pinned at workspace root; members inherit
# via `dep = { workspace = true }`. The canonical member list is below.

[workspace]
resolver = "3"
members = [
    # Ordering is publish-DAG: every member appears after all the
    # workspace members it depends on. The facade `entelix` (depends
    # on every other member) is therefore last; manifest-order
    # `cargo publish` walks the list bottom-up safely.

    # ── DAG root ────────────────────────────────────────────────────────
    "crates/entelix-core",            # IR, Codec, Transport, Tool, Auth, Hooks, Events, ExecutionContext

    # ── composition + control flow ──────────────────────────────────────
    "crates/entelix-runnable",        # Runnable trait, LCEL pipe, Sequence/Parallel/Router/Lambda
    "crates/entelix-prompt",          # PromptTemplate, ChatPromptTemplate, MessagesPlaceholder, FewShot
    "crates/entelix-graph",           # StateGraph, reducer, conditional edges, Send, subgraphs, Checkpointer trait, interrupts
    "crates/entelix-graph-derive",    # proc-macro — #[derive(StateMerge)] for per-field Annotated<T, R> reducer composition
    "crates/entelix-tool-derive",     # proc-macro — #[tool] attribute generates SchemaTool impl from an async fn signature

    # ── state / memory ──────────────────────────────────────────────────
    "crates/entelix-session",         # SessionGraph (event log), fork, archival watermark
    "crates/entelix-memory",          # Store/Embedder/Retriever/VectorStore traits, Buffer/Summary/Entity, SemanticMemory generic
    "crates/entelix-memory-openai",   # concrete OpenAI Embedder — text-embedding-3-{small,large}
    "crates/entelix-memory-qdrant",   # concrete VectorStore — qdrant-client gRPC
    "crates/entelix-memory-pgvector", # concrete VectorStore — sqlx + pgvector extension
    "crates/entelix-graphmemory-pg",  # concrete GraphMemory — sqlx + Postgres (nodes + typed edges)
    "crates/entelix-rag",             # RAG primitives — Document w/ provenance + lineage, DocumentLoader / TextSplitter / Chunker traits
    "crates/entelix-persistence",     # Postgres + Redis impls (Checkpointer + Store + SessionLog), distributed lock

    # ── tokenization ────────────────────────────────────────────────────
    "crates/entelix-tokenizer-tiktoken", # Vendor-accurate TokenCounter for OpenAI BPE encodings (cl100k_base / o200k_base / p50k_base / r50k_base)
    "crates/entelix-tokenizer-hf",       # Vendor-accurate TokenCounter wrapping HuggingFace `tokenizers` (Llama / Qwen / Mistral / DeepSeek)

    # ── action surface ──────────────────────────────────────────────────
    "crates/entelix-tools",           # http_fetch, search adapter trait, calculator
    "crates/entelix-tools-coding",    # Sandbox-trait-backed shell / code / fs tools + Anthropic Skills layout (vertical companion)
    "crates/entelix-mcp",             # MCP client (JSON-RPC 2.0 over HTTP); ChatModelSamplingProvider behind `chatmodel-sampling`
    "crates/entelix-cloud",           # Bedrock + Vertex + Foundry transports

    # ── operational ─────────────────────────────────────────────────────
    "crates/entelix-policy",          # tenant, rate-limit, PII, cost meter, quota
    "crates/entelix-otel",            # OpenTelemetry GenAI semconv
    "crates/entelix-server",          # axum + 5-mode SSE streaming
    "crates/entelix-auth-claude-code", # Claude.ai OAuth credential provider (Claude Code CLI shared storage)

    # ── recipes ─────────────────────────────────────────────────────────
    "crates/entelix-agents",          # ReAct, Supervisor, Hierarchical, Chat pre-built recipes

    # ── facade (publish last; depends on every member above) ────────────
    "crates/entelix",
]

[workspace.package]
version = "0.5.2"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["junyeong-ai"]
repository = "https://github.com/junyeong-ai/entelix"
homepage = "https://github.com/junyeong-ai/entelix"
documentation = "https://docs.rs/entelix"
keywords = ["ai", "agent", "llm", "graph", "runtime"]
categories = ["api-bindings", "asynchronous"]

# ─────────────────────────────────────────────────────────────────────────
# [workspace.dependencies] — pinned 2026-04-26 (latest stable)
# ─────────────────────────────────────────────────────────────────────────

[workspace.dependencies]

# ── Async / HTTP ─────────────────────────────────────────────────────────
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "http2", "multipart"] }
# Pinned for live-API tests so the integration suite can install a
# concrete `CryptoProvider` before the first reqwest call (rustls
# 0.23+ panics otherwise). Production applications install their
# own provider in `main`; the workspace `dev-dependencies` of
# `entelix-cloud` and `entelix-auth-claude-code` re-use this pin.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
http = "1.4"
axum = { version = "0.8", features = ["macros", "tokio", "http2"] }
tower = { version = "0.5", features = ["util"] }

# ── Serialization / Schema ───────────────────────────────────────────────
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
schemars = "1.2"
jsonschema = { version = "0.46", default-features = false }
bytes = "1.11"

# ── Async primitives ─────────────────────────────────────────────────────
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"
tokio-util = { version = "0.7", features = ["time", "io"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# ── Proc-macro tooling (entelix-graph-derive) ───────────────────────────
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# ── Errors / Tracing ─────────────────────────────────────────────────────
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── Core types ───────────────────────────────────────────────────────────
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
url = "2.5"
idna = "1.1"
hickory-resolver = { version = "0.26", default-features = false, features = ["system-config", "tokio"] }
secrecy = { version = "0.10", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }

# ── Concurrency / Hashing ────────────────────────────────────────────────
dashmap = "6.1"
parking_lot = "0.12"
rand = "0.10"
twox-hash = "2.1"
sha2 = "0.10"

# ── Regex ────────────────────────────────────────────────────────────────
regex = "1"

# ── Templating ───────────────────────────────────────────────────────────
minijinja = { version = "2", default-features = false, features = ["builtins", "loader", "preserve_order", "serde"] }

# ── Persistence ──────────────────────────────────────────────────────────
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono", "uuid", "rust_decimal", "macros", "migrate"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp"] }

# ── Vector backends (companion crates only) ─────────────────────────────
qdrant-client = "1"
pgvector = { version = "0.4", features = ["sqlx"] }

# ── Observability ────────────────────────────────────────────────────────
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "metrics", "logs", "reqwest-client"] }
tracing-opentelemetry = "0.32"
http-body-util = "0.1"

# ── Cloud (optional, gated per crate) ────────────────────────────────────
aws-config = "1.8"
aws-credential-types = "1.2"
aws-sigv4 = "1.4"
aws-smithy-runtime-api = "1.9"
gcp_auth = "0.12"
azure_identity = "0.35"
azure_core = "0.35"
crc32fast = "1"

# ── Tokenizers (companion crates only) ──────────────────────────────────
tiktoken-rs = "0.11"
# `tokenizers` ships native-C deps (onig regex, esaxx_fast unigram) under
# its default features — `fancy-regex` is the pure-Rust alternative the
# entelix workspace pins so the build graph stays C-free. `progressbar`
# is irrelevant for SDK use; `hf-hub` would force network IO into the
# wrapper which we route through bytes-only constructors instead.
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }

# ── Test / dev tooling (per-crate `[dev-dependencies]` inherits these) ──
wiremock = "0.6"
testcontainers = { version = "0.27", features = ["watchdog"] }
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
proptest = "1.7"

# ── Internal crate references ────────────────────────────────────────────
entelix-core        = { version = "0.5.2", path = "crates/entelix-core" }
entelix-runnable    = { version = "0.5.2", path = "crates/entelix-runnable" }
entelix-prompt      = { version = "0.5.2", path = "crates/entelix-prompt" }
entelix-graph       = { version = "0.5.2", path = "crates/entelix-graph" }
entelix-graph-derive = { version = "0.5.2", path = "crates/entelix-graph-derive" }
entelix-tool-derive = { version = "0.5.2", path = "crates/entelix-tool-derive" }
entelix-session     = { version = "0.5.2", path = "crates/entelix-session" }
entelix-memory      = { version = "0.5.2", path = "crates/entelix-memory" }
entelix-memory-openai   = { version = "0.5.2", path = "crates/entelix-memory-openai" }
entelix-memory-qdrant   = { version = "0.5.2", path = "crates/entelix-memory-qdrant" }
entelix-memory-pgvector = { version = "0.5.2", path = "crates/entelix-memory-pgvector" }
entelix-graphmemory-pg  = { version = "0.5.2", path = "crates/entelix-graphmemory-pg" }
entelix-rag         = { version = "0.5.2", path = "crates/entelix-rag" }
entelix-tokenizer-tiktoken = { version = "0.5.2", path = "crates/entelix-tokenizer-tiktoken" }
entelix-tokenizer-hf = { version = "0.5.2", path = "crates/entelix-tokenizer-hf" }
entelix-persistence = { version = "0.5.2", path = "crates/entelix-persistence" }
entelix-tools       = { version = "0.5.2", path = "crates/entelix-tools" }
entelix-tools-coding = { version = "0.5.2", path = "crates/entelix-tools-coding" }
entelix-mcp         = { version = "0.5.2", path = "crates/entelix-mcp" }
entelix-cloud       = { version = "0.5.2", path = "crates/entelix-cloud" }
entelix-policy      = { version = "0.5.2", path = "crates/entelix-policy" }
entelix-otel        = { version = "0.5.2", path = "crates/entelix-otel" }
entelix-server      = { version = "0.5.2", path = "crates/entelix-server" }
entelix-agents      = { version = "0.5.2", path = "crates/entelix-agents" }
entelix-auth-claude-code = { version = "0.5.2", path = "crates/entelix-auth-claude-code" }

# ─────────────────────────────────────────────────────────────────────────
# Lints — workspace-wide
# ─────────────────────────────────────────────────────────────────────────

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.rustdoc]
# Rustdoc hygiene — broken doc links are silent surface bugs that
# rustdoc emits as warnings by default; deny so the build fails
# without needing `RUSTDOCFLAGS=-D warnings` at every invocation.
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pragmatic exceptions for SDK ergonomics
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
# `Duration::from_hours` / `from_days` are unstable on stable Rust
# 1.95 (`duration_constructors` feature gate). Until they stabilise,
# `from_secs` / `from_mins` is the only portable option even when the
# nursery lint suggests the larger unit.
duration_suboptimal_units = "allow"
# Hard rules
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# CLAUDE.md §"Lock ordering" — locks must never be held across
# `.await` on a user-supplied future. Clippy's lint catches the
# whole class statically; deny across the workspace.
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
# Naming consistency (`.claude/rules/naming.md`)
similar_names = "warn"
struct_excessive_bools = "warn"

# ─────────────────────────────────────────────────────────────────────────
# Profile tuning
# ─────────────────────────────────────────────────────────────────────────

# Workspace dev profile is tuned for a 21-crate workspace with 114
# integration-test binaries and 18 examples — every binary statically
# links the full dependency graph (2447 transitive crates). The four
# axes below cut `target/` from the multi-tens-of-GB stock-default
# pathology to single-digit GB while keeping touched-file rebuilds
# in the 1–2s range.
[profile.dev]
# Line tables only: keeps backtraces with file:line resolution but
# drops the DWARF variable / type metadata an interactive debugger
# would consume. Cuts per-`.o` debug-info ~5×; SDKs are debugged
# through `tracing` + test failure messages, not LLDB symbol
# inspection.
debug = "line-tables-only"
# Unpacked DWARF: split debug info into separate `.dwo` files
# instead of embedding inside `.o`. macOS-canonical; prevents
# per-codegen-unit duplication of identical debug records.
split-debuginfo = "unpacked"
# Incremental compilation is on. The earlier 33 GB cache pathology
# was caused by *full DWARF × 2400 third-party deps × per-feature
# matrix*, not by incremental itself. With `debug = "line-tables-
# only"` and the `package."*"` strip below, each fingerprint shrinks
# 5–10×; cache stays in the low-GB range and per-edit rebuild drops
# to ~1–2s vs ~8s without.
incremental = true
# Default codegen-units (16) matches typical core counts on dev
# hardware and keeps file count tractable. Higher CGU counts inflate
# `target/debug/deps/` linearly without parallelism gain past core
# saturation; the earlier `256` experiment is the proximate cause
# of the 970k-file pathology.
codegen-units = 16

# Third-party dependencies are debugged through their published
# sources or release builds — never through this workspace's debug
# info. Stripping their debuginfo entirely is the single biggest
# disk saving (~80% of the dev `target/`). `opt-level = 0` stays
# so panic / overflow / bounds checks remain useful when entelix
# code calls into a third-party crate.
[profile.dev.package."*"]
debug = false
opt-level = 0

# Test profile inherits dev so `cargo build` and `cargo test`
# share a single cache instead of fragmenting into two parallel
# build trees. Cargo's default already inherits, but the explicit
# declaration documents the intent and protects against silent
# default drift in future cargo releases.
[profile.test]
inherits = "dev"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.bench]
inherits = "release"
debug = "line-tables-only"
