[package]
name = "entelix-cloud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
description = "entelix cloud transports — Bedrock, Vertex, Foundry; OAuth refresh (gcp_auth, aws-sigv4, azure_identity)"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = []
aws = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sigv4",
    "dep:aws-smithy-runtime-api",
    "dep:crc32fast",
]
gcp = ["dep:gcp_auth"]
azure = ["dep:azure_core", "dep:azure_identity", "dep:time"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
entelix-core = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# AWS (feature-gated)
aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-sigv4 = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true, optional = true }
crc32fast = { workspace = true, optional = true }

# GCP (feature-gated)
gcp_auth = { workspace = true, optional = true }

# Azure (feature-gated)
azure_core = { workspace = true, optional = true }
azure_identity = { workspace = true, optional = true }
time = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wiremock = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
