[package]
name = "entelix-graph-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
description = "entelix proc-macro — #[derive(StateMerge)] for per-field Annotated<T, R> reducer composition on StateGraph state types"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
entelix-graph = { workspace = true }
