[package]
name = "entelix-mcp-chatmodel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
description = "entelix companion — bridges MCP `sampling/createMessage` server-initiated requests to an `entelix_core::ChatModel<C, T>`"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
entelix-core = { workspace = true }
entelix-mcp = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
