[package]
name = "entelix-memory-pgvector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
description = "entelix concrete VectorStore — sqlx + pgvector extension backend"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
entelix-core = { workspace = true }
entelix-memory = { workspace = true }
async-trait = { workspace = true }
pgvector = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
