[package]
name = "entelix-otel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
description = "entelix observability — full OpenTelemetry GenAI semconv span builders, metrics, log bridge"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = []
otlp = ["dep:opentelemetry-otlp", "dep:tracing-subscriber"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
entelix-core = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
