[package]
name = "entelix-prompt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
description = "entelix prompt primitives — PromptTemplate, ChatPromptTemplate, MessagesPlaceholder, FewShot, ExampleSelector"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
entelix-core = { workspace = true }
entelix-runnable = { workspace = true }
async-trait = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
